--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor = "#CCFBFE"
 backgroundColor = "#CDD6DD"
-secondaryBackgroundColor = "#CDCACC"
+secondaryBackgroundColor = "#7DC4B2"
 textColor = "#262730"
 font = "sans serif"
